@@ -152,6 +152,26 @@ init|=
 operator|-
 literal|1
 decl_stmt|;
+comment|/** Used for testing.    *    * @lucene.internal */
+DECL|field|DEFAULT_CPU_CORE_COUNT_PROPERTY
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DEFAULT_CPU_CORE_COUNT_PROPERTY
+init|=
+literal|"lucene.cms.override_core_count"
+decl_stmt|;
+comment|/** Used for testing.    *    * @lucene.internal */
+DECL|field|DEFAULT_SPINS_PROPERTY
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DEFAULT_SPINS_PROPERTY
+init|=
+literal|"lucene.cms.override_spins"
+decl_stmt|;
 comment|/** List of currently active {@link MergeThread}s. */
 DECL|field|mergeThreads
 specifier|protected
@@ -429,6 +449,55 @@ expr_stmt|;
 block|}
 else|else
 block|{
+name|int
+name|coreCount
+init|=
+name|Runtime
+operator|.
+name|getRuntime
+argument_list|()
+operator|.
+name|availableProcessors
+argument_list|()
+decl_stmt|;
+comment|// Let tests override this to help reproducing a failure on a machine that has a different
+comment|// core count than the one where the test originally failed:
+try|try
+block|{
+name|String
+name|value
+init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+name|DEFAULT_CPU_CORE_COUNT_PROPERTY
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|value
+operator|!=
+literal|null
+condition|)
+block|{
+name|coreCount
+operator|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|value
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|ignored
+parameter_list|)
+block|{       }
 name|maxThreadCount
 operator|=
 name|Math
@@ -443,13 +512,7 @@ name|min
 argument_list|(
 literal|4
 argument_list|,
-name|Runtime
-operator|.
-name|getRuntime
-argument_list|()
-operator|.
-name|availableProcessors
-argument_list|()
+name|coreCount
 operator|/
 literal|2
 argument_list|)
@@ -1269,6 +1332,44 @@ name|getDirectory
 argument_list|()
 argument_list|)
 decl_stmt|;
+comment|// Let tests override this to help reproducing a failure on a machine that has a different
+comment|// core count than the one where the test originally failed:
+try|try
+block|{
+name|String
+name|value
+init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+name|DEFAULT_SPINS_PROPERTY
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|value
+operator|!=
+literal|null
+condition|)
+block|{
+name|spins
+operator|=
+name|Boolean
+operator|.
+name|parseBoolean
+argument_list|(
+name|value
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|ignored
+parameter_list|)
+block|{       }
 name|setDefaultMaxMergesAndThreads
 argument_list|(
 name|spins
