@@ -8488,6 +8488,124 @@ name|DEFAULT_CACHING_POLICY
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|BeforeClass
+DECL|method|setupCPUCoreCount
+specifier|public
+specifier|static
+name|void
+name|setupCPUCoreCount
+parameter_list|()
+block|{
+comment|// Randomize core count so CMS varies its dynamic defaults, and this also "fixes" core
+comment|// count from the master seed so it will always be the same on reproduce:
+name|int
+name|numCores
+init|=
+name|TestUtil
+operator|.
+name|nextInt
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+literal|1
+argument_list|,
+literal|4
+argument_list|)
+decl_stmt|;
+name|System
+operator|.
+name|setProperty
+argument_list|(
+name|ConcurrentMergeScheduler
+operator|.
+name|DEFAULT_CPU_CORE_COUNT_PROPERTY
+argument_list|,
+name|Integer
+operator|.
+name|toString
+argument_list|(
+name|numCores
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|AfterClass
+DECL|method|restoreCPUCoreCount
+specifier|public
+specifier|static
+name|void
+name|restoreCPUCoreCount
+parameter_list|()
+block|{
+name|System
+operator|.
+name|clearProperty
+argument_list|(
+name|ConcurrentMergeScheduler
+operator|.
+name|DEFAULT_CPU_CORE_COUNT_PROPERTY
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|BeforeClass
+DECL|method|setupSpins
+specifier|public
+specifier|static
+name|void
+name|setupSpins
+parameter_list|()
+block|{
+comment|// Randomize IOUtils.spins() count so CMS varies its dynamic defaults, and this also "fixes" core
+comment|// count from the master seed so it will always be the same on reproduce:
+name|boolean
+name|spins
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+decl_stmt|;
+name|System
+operator|.
+name|setProperty
+argument_list|(
+name|ConcurrentMergeScheduler
+operator|.
+name|DEFAULT_SPINS_PROPERTY
+argument_list|,
+name|Boolean
+operator|.
+name|toString
+argument_list|(
+name|spins
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|AfterClass
+DECL|method|restoreSpins
+specifier|public
+specifier|static
+name|void
+name|restoreSpins
+parameter_list|()
+block|{
+name|System
+operator|.
+name|clearProperty
+argument_list|(
+name|ConcurrentMergeScheduler
+operator|.
+name|DEFAULT_SPINS_PROPERTY
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * Create a new searcher over the reader. This searcher might randomly use    * threads.    */
 DECL|method|newSearcher
 specifier|public
